--- a/index.html
+++ b/index.html
@@ -75,59 +75,36 @@
 
 <div class="row">
 
-  <div class="col-md-2 col-sm-2 vertical-align">
-    <p>
-    <div style="max-width: 130px; text-align: center;">
-      <img src="images/Ben_Profile_edit.jpg" style="width: 100%; padding-top: 10px;">
-    </div>
-    </p>
-  </div>
+
 
   <div class="col-md-8 col-sm-8">
-    <p><h2>Ben Van Hoose</h2>
-    Student, College of Engineering CE<br>
-    University of Utah, Salt Lake City, UT, USA, 84112<br>
-    Engineer Intern, Quartzdyne
+    <p><h2>Water Depth Sensor</h2>
     </p>
   </div>
   
 </div>
 <hr>
 
-<h3>Objective</h3>
-<p>Create, innovate, save the world, and hopefully make money while doing it.</p>
+<h3>People</h3>
+<li>Spencer Durrant</li>
+<li>Tristan Stotesbery</li>
+<li>Ben Van Hoose</li><br>
+<p>Looking for: People experienced with bluetooth interfacing and 
+app development, people with 3D-printing experience.</p>
 <hr>
 
-<h3 style="padding-bottom: 10px;">Project Ideas</h3>
-	<dl>	
-		<div style="margin-left: 50px">
-		<dt style="font-size:14pt; text-decoration: underline; padding-bottom: 5px;">Automated Aquarium </dt>		
-		</div>	
-	</dl>
-	<div>
-		<img class="gif" src="images/fish.gif" style="width: 150px;">
-	</div>
-	<div class="row">
-		<div class="column" style="padding-right: 15px;">
-			<dt>- Automation</dt>
-			<ul>
-				  <li>Feeding</li>
-				  <li>Temperature control</li>
-				  <li>Lighting</li>
-				  <li>Filtration</li>
-				</ul>
-		</div>
-		<div class="column">
-			<dt>- App UI</dt>
-			<ul>
-				<li>Display total food remaining</li>
-				  <li>Set and display temperature</li>
-				  <li>Set lighting schedule</li>
-				  <li>Display toxicity level</li>
-				  <li><p class="rgb">Control RGB LEDs</p></li>
-			</ul>
-		</div>
-	</div>
+<h3 style="padding-bottom: 10px;">Project Abstract</h3>
+	<p>Our teams objective is to create a handheld water depth sensor 
+	that will interface with a phone to give the user the depth, 
+	for use in applications such as canyoneering, fishing, 
+	cliff diving, search and rescue.</p><br>
+	<p>We need to utilize either ultrasonic sensors, pressure 
+	sensors, or sonar in order to calculate water depth regardless 
+	on how clear the water is. Needs to be small enough to be handheld,
+	lightweight for taking in a pack.</P>
+	
+	<p><b>Importance</b></p>
+	
 <hr>
 
 <h3>Skills</h3>
