--- a/index.html
+++ b/index.html
@@ -16,43 +16,20 @@
 
 </head>
 
-<style> 
-	img { 
-            float: left;  
-            margin: 5px; 
-			border-radius: 15px 15px 5px 5px;		
-    } 
-	
+<style>
 	p { 
 		text-align: justify;             
 	}
 	
-	.rgb  {
-	  animation: color-change 3s infinite;
-	}
-
-	@keyframes color-change {
-	  0% { color: red; }
-	  25% { color: yellow; }
-	  50% { color: blue; }
-	  75% { color: green; }
-	  100% { color: red; }
-	}	
 </style>
 
 <body>
 
 <div class="container">
-
 <div class="row">
-
-
-
   <div class="col-md-8 col-sm-8">
-    <p><h2>Water Depth Sensor</h2>
-    </p>
-  </div>
-  
+    <p><h2>Water Depth Sensor</h2></p>
+  </div>  
 </div>
 <hr>
 
