--- a/index.html
+++ b/index.html
@@ -1,144 +1,160 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<!--
+	Awesome Responsive Template
+	templatestock.co
+-->
+<html>
 <head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Water Depth Sensor</title>
+	<!-- Bootstrap CSS -->
+	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 
-<title>Group 3's Homepage</title>
+	<!-- Goggle Font -->
+	<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Roboto:400,100,300,500">
 
-<!-- Bootstrap core CSS -->
-<link rel="stylesheet" href="css/custom.css?v=2020-10-10">
-<link rel="stylesheet" href="css/bootstrap/4.4.1/bootstrap.min.css">
-<script type="text/javascript" src="js/jquery/3.4.1/jquery.min.js"></script>
-<script type="text/javascript" src="js/bootstrap/4.4.1/bootstrap.min.js"></script>
+	<!-- Font Css -->
+	<link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
+
+	<!-- Custom CSS -->
+	<link rel="stylesheet" type="text/css" href="css/style.css">
+
+	<!-- Animation Css -->
+	<link rel="stylesheet" href="css/animate.css">
+
 
 </head>
-
-<style>
-	p { 
-		text-align: justify;             
-	}
-	
-</style>
-
 <body>
+<!-- Header -->
+<div class="header-div">
 
-<div class="container">
-<div class="row">
-  <div class="col-md-8 col-sm-8">
-    <p><h2>Water Depth Sensor</h2></p>
-  </div>  
-</div>
-<hr>
+<nav class="navbar navbar-default">
+  <div class="container">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header logo-div bounceInLeft wow" data-wow-duration="2s">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="#">Water Depth Sensor</a>
+    </div>
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse top-right-menu-ul bounceInRight wow" id="bs-example-navbar-collapse-1" data-wow-duration="4s">
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="#Team">Team</a></li>
+        <li><a href="#Challenges">Challenges</a></li>
+        <li><a href="#Challenges">Proposed Methods</a></li>
+        <li><a href="#Budget">Budget</a></li>
+        <li><a href="#Timeline">Timeline</a></li>
+		<li><a href="#Collaboration Plan">Collaboration Plan</a></li>
+        <li><a href="#"></a></li>
+      </ul>
+    </div><!-- End navbar-collapse -->
+  </div><!-- End container -->
+</nav>
 
-<h3>Meet the Team</h3>
-<table style="width:100%">
-	  <tr>
-		<th>Name</th>
-		<th>Email</th>
-		<th>Phone</th>
-	  </tr>
-	  <tr>
-		<td>Spencer Durrant</td>
-		<td>spencerdurrant@gmail.com</td>
-		<td>(801) 815-2561</td>
-	  </tr>
-	  <tr>
-		<td>Tristan Stotesbery</td>
-		<td>tristan.stotesbery@gmail.com</td>
-		<td>(801) 839-9688</td>
-	  </tr>
-	  <tr>
-		<td>Ben Van Hoose</td>
-		<td>benvanhoose1@gmail.com</td>
-		<td>(541) 806-2912</td>
-	  </tr>
-	</table>
+<div class="container wow bounceInDown" data-wow-duration="4s">
+	<div class="row">
+		<div class="col-md-offset-0 col-md-8 text-left slide-text">
+			<h1>Abstract</h1>
+			<p style="font-size: 20px;"><b>Our teams objective is to create a handheld water depth sensor that will interface with a phone to give the user the depth, 
+			for use in applications such as canyoneering, fishing, cliff diving, search and rescue.</b></p>
+			<p style="font-size: 20px;"><b>We need to utilize either ultrasonic sensors, pressure sensors, or sonar in order to calculate water depth regardless 
+			on how clear the water is. Needs to be small enough to be handheld, lightweight for taking in a pack.</b></p>
+			<p style="font-size: 20px;"><b>This project allows improved safety in several applications including those mentioned above. Knowing how deep or shallow
+			water is can prevent accidents from happening in areas.</b></p>
+		</div><!-- End col-md-8-->
+		<div class="col-md-offset-2"></div><!-- End col-md-offset-2 -->
+	</div><!-- End Row -->
+</div><!-- End Contanier -->
+
+</div><!-- End header-div -->
+
+<!-- Feature -->
+
+<div class="container" id="Challenges">
+	<div class="row">
+		<div class="col-md-12">
+			<div class="main_heading">
+				<h1>Challenges and Proposed Solutions</h1>
+				<div  class="text-center"><span class="underline"></span></div>				
+			</div>
+		</div><!-- End col-md-12 -->
+	</div><!-- End row -->
+	<h2 style="text-align:center">Software</h2><br>
+	<div class="row">
+		<div class="col-md-3 col-sm-6">
+			<div class="features-div">
+			   <i class="fa fa-code"></i>
+			   <h4>Bluetooth interfacing with a phone</h4>
+			   <p>Learn Bluetooth protocols from online sources</p>
+			</div>
+		</div><!-- End col-md-3-->
+		<div class="col-md-3 col-sm-6">
+			<div class="features-div">
+			   <i class="fa fa-mobile"></i>
+			   <h4>Mobile app development</h4>
+			   <p>Either recruit someone who knows app development or one person dedicates time to learn this</p>
+			</div>
+		</div><!-- End col-md-3-->
+		<div class="col-md-3 col-sm-6">
+			<div class="features-div">
+			   <i class="fa fa-mobile"></i>
+			   <h4>Correct calculations of water depth from sensor input</h4>
+			   <p>Navigate the datasheet of the sensing device or board</p>
+			</div>			
+		</div><!-- End col-md-3-->
+		<div class="col-md-3 col-sm-6">
+			<div class="features-div">
+			   <i class="fa fa-mobile"></i>
+			   <h4>Future Challenge</h4>
+			   <p></p>
+			</div>			
+		</div><!-- End col-md-3-->	
+	</div><!-- End row -->
 	<br>
-
-
-<p>Looking for: People experienced with bluetooth interfacing and 
-app development, people with 3D-printing experience.</p>
-<hr>
-
-<h3 style="padding-bottom: 10px;">Project Abstract</h3>
-	<p>Our teams objective is to create a handheld water depth sensor 
-	that will interface with a phone to give the user the depth, 
-	for use in applications such as canyoneering, fishing, 
-	cliff diving, search and rescue.</p>
-	<p>We need to utilize either ultrasonic sensors, pressure 
-	sensors, or sonar in order to calculate water depth regardless 
-	on how clear the water is. Needs to be small enough to be handheld,
-	lightweight for taking in a pack.</P>
+	<h2 style="text-align:center">Hardware</h2><br>
+	<div class="row">
+		<div class="col-md-3 col-sm-6">
+			<div class="features-div">
+			   <i class="fa fa-mobile"></i>
+			   <h4>Reliable power supply</h4>
+			   <p>Build a rechargable lithium-ion battery pack that can handle the requirements of the device</p>
+			</div>
+		</div><!-- End col-md-3-->
+		<div class="col-md-3 col-sm-6">
+			<div class="features-div">
+			   <i class="fa fa-pencil"></i>
+			   <h4>Designing a pcb to manage the sensor and connect with bluetooth</h4>
+			   <p>Study the datasheets of the sensor we use in order to interface it correctly with a microcontroller</p>
+			</div>
+		</div><!-- End col-md-3-->
+		<div class="col-md-3 col-sm-6">
+			<div class="features-div">
+			   <i class="fa fa-life-ring"></i>
+			   <h4>Design the enclosure such that it protects the electronics from water and debris</h4>
+			   <p>Design the enclosure such that it protects the electronics from water and debris</p>
+			</div>			
+		</div><!-- End col-md-3-->
+		<div class="col-md-3 col-sm-6">
+			<div class="features-div">
+			   <i class="fa fa-mobile"></i>
+			   <h4>Future Challenge</h4>
+			   <p></p>
+			</div>			
+		</div><!-- End col-md-3-->
+	</div><!-- End row -->
 	
-	<p><b>Importance</b></p>
-	<p>This project allows improved safety in several applications 
-	including those mentioned above. Knowing how deep or shallow water is 
-	can prevent accidents from happening in areas.</p>
-	
-	
-<hr>
+</div><!-- End Container -->
 
-<h3>Challenges</h3>
-	<dt>Hardware</dt>
-			<ul>
-				  <li>Reliable power supply</li>
-				  <li>Designing a pcb to manage the sensor and connect with bluetooth</li>
-				  <li>Waterproofing</li>
-			</ul>
-	<dt>Software</dt>
-			<ul>
-				  <li>Bluetooth interfacing with a phone</li>
-				  <li>Mobile app development</li>
-				  <li>Correct calculations of water depth from sensor input</li>
-			</ul>
+<div class="more-feature-div" id="Timeline">
+	<div class="container">
+		<h2>Timeline</h2><br>
+	<h4>Our goal for our prototype is to have working sensor that can read 
+	water depth utilizing arduino or raspberry pi for calculations.</h4><br>
 
-<hr>
-<h3>Proposed Methods</h3>
-	<dt>Hardware</dt>
-			<ul>
-				  <li>Build a rechargable lithium-ion battery pack that can handle the requirements of the device</li>
-				  <li>Study the datasheets of the sensor we use in order to interface it correctly with a microcontroller</li>
-				  <li>Design the enclosure such that it protects the electronics from water and debris</li>
-			</ul>
-	<dt>Software</dt>
-			<ul>
-				  <li>Learn Bluetooth protocols from online sources</li>
-				  <li>Either recruit someone who knows app development or one person dedicates time to learn this</li>
-				  <li>Navigate the datasheet of the sensing device or board</li>
-			</ul>
-<hr>
-
-<h3>Budget</h3>
-	<dt>Final Build</dt>
-	<ul>
-		  <li>PCB: $10</li>
-		  <li>PCB parts: $2</li>
-		  <li>Microprocessor: $6</li>
-		  <li>Sensor: $20</li>
-		  <li>Blutooth Module: $10</li>
-		  <li>Batteries: $4</li>
-		  <li>3D printing filament: $11</li>
-		  <li>Styrofoam: $20</li>
-		  <li>Fiberglass: $11</li>
-	</ul>
-	 <p><b>Total cost for 1 device: $99</b></p>
-	<dt>Prototype Build</dt>
-	<ul>		  
-		  <li>Sensor: $20-100</li>
-		  <li>Blutooth Module: $10</li>
-		  <li>Batteries: $4</li>
-	</ul>
-	 <p><b>Total cost for 1 device: $34 - $114</b></p>
-<hr>
-
-<h3>Timeline</h3>
-<p>Our goal for our prototype is to have working sensor that can read 
-water depth utilizing arduino or raspberry pi for calculations.</p>
-
-	<table style="width:100%">
+	<table style="width:100%; font-size: 120%">
 	  <tr>
 		<th>Objective</th>
 		<th>Date</th>
@@ -160,33 +176,212 @@ water depth utilizing arduino or raspberry pi for calculations.</p>
 		<td>no</td>
 	  </tr>
 	</table>
-	
-<hr>
-<h3>Collaboration Plan</h3>
-	<dt>Communications</dt>
-		<li>Zoom and in-person</li>
-	<dt>Conflict Resolution</dt>
-		<li>Vote - Democracy</li>
-	<dt>Maintaining Momentum</dt>
-		<li>Set goals, meet regularly, and report progress</li>
-	<dt>Accountability</dt>
-		<li>Make appropriate adjustments to make up for failed progress</li>
-	<dt>Budget Distribution</dt>
-		<li>Evenly distributed</li>
-<hr>
+	</div><!-- ENd container -->
 </div>
 
+<!-- End Feature -->
 
-<hr>
-<footer>Last update 02/24/2021</footer>
 
+<!-- Services -->
+
+<div class="container" id="Collaboration Plan">
+	<div class="row">
+		<div class="col-md-12">
+			<div class="main_heading">
+				<h1>Collaboration Plan</h1>
+				<div  class="text-center"><span class="underline"></span></div>
+			</div>
+		</div><!-- End col-md-12 -->
+	</div><!-- End row -->
+
+	<div class="col-md-4 services-box-gray col-sm-6">
+		<div class="services-box">
+			<i class="fa fa-support"></i>
+			<h4>Communications</h4>
+			<p>Zoom and in-person</p>
+		</div>
+	</div><!-- End col-md-4-->
+	<div class="col-md-4 col-sm-6">
+		<div class="services-box">
+			<i class="fa fa-rocket"></i>
+			<h4>Conflict Resolution</h4>
+			<p>Vote - Democracy</p>
+		</div>
+	</div><!-- End col-md-4-->
+	<div class="col-md-4 services-box-gray col-sm-6">
+		<div class="services-box">
+			<i class="fa fa-cogs"></i>
+			<h4>Maintaining Momentum</h4>
+			<p>Set goals, meet regularly, and report progress</p>
+		</div>
+	</div><!-- End col-md-4-->
+	<div class="col-md-4 col-sm-6">
+		<div class="services-box">
+			<i class="fa fa-magic"></i>
+			<h4>Accountability</h4>
+			<p>Make appropriate adjustments to make up for failed progress</p>
+		</div>
+	</div><!-- End col-md-4-->
+	<div class="col-md-4 services-box-gray col-sm-6">
+		<div class="services-box">
+			<i class="fa fa-support"></i>
+			<h4>Budget Distribution</h4>
+			<p>Evenly distributed</p>
+		</div>
+	</div><!-- End col-md-4-->
+	<div class="col-md-4 col-sm-6">
+		<div class="services-box">
+			<i class="fa fa-rocket"></i>
+			<h4>24/7 Support</h4>
+			<p></p>
+		</div>
+	</div><!-- End col-md-4-->
+
+
+</div><!-- End container -->
+
+<!-- End Services -->
+
+<!-- Call to Action -->
+<div class="call-action-bg" id="Call-to-Action">
+	<br><br><br><br><br><br>
 </div>
+
+<!-- End Call to Action -->
+<!-- End Call to Action -->
+
+<!-- Price Table -->
+
+<div class="container" id="Budget">
+	<div class="row">
+		<div class="col-md-12">
+			<div class="main_heading">
+				<h1>Budget</h1>
+				<div  class="text-center"><span class="underline"></span></div>
+			</div>
+		</div><!-- End col-md-12 -->
+	</div><!-- End row -->
+
+	<div class="row">
+		<div class="col-md-4">
+			<div class="pricing-box">
+				
+			    <h3>Prototype</h3>
+			    <div class="pricing-box-features">
+			    	<ul>
+			    		<li>Sensor: $20-100</li>
+			    		<li>Blutooth Module: $10</li>
+			    		<li>Batteries: $4</li>
+			    	</ul>
+			    </div>
+				<h4>Total cost for 1 device: $34 - $114</h4>			   
+			</div>
+		</div><!-- End col-dm-4 -->
+		<div class="col-md-4 pricing-box-best">
+			<div class="pricing-box">
+                <h3>Final Build</h3>
+                <div class="pricing-box-features">
+                	<ul>
+                		<li>PCB: $10</li>
+                		<li>PCB parts: $2</li>
+                		<li>Microprocessor: $6</li>
+                		<li>Sensor: $20</li>
+                		<li>Blutooth Module: $10</li>
+						<li>Batteries: $4</li>
+						<li>3D printing filament: $11</li>
+						<li>Styrofoam: $20</li>
+						<li>Fiberglass: $11</li>						
+                	</ul>
+                </div>
+				<h4>Total cost for 1 device: $99</h4>			
+            </div>
+		</div><!-- End col-dm-4 -->		
+	</div><!-- End row -->
+
+</div><!-- End container -->
+
+<!-- End Price Table -->
+
+<!-- About -->
+<div class="container" id="Team">
+	<div class="row">
+		<div class="col-md-12">
+			<div class="main_heading">
+				<h1>Team</h1>
+				<div  class="text-center"><span class="underline"></span></div>
+			</div>
+		</div><!-- End col-md-12 -->
+	</div><!-- End row -->
+
+
+	<div class="row">
+		<div class="col-md-4 about-us-box wow fadeInUp animated">
+		    <div class="about-us-photo">
+		    	<img src="images/spencer.jpg" alt="" style="width:120px;height:120px;">
+		    	<div class="about-us-role">Computer Eng.</div>
+		    </div>
+		    <h3>Spencer Durrant</h3>
+		    <p>spencerdurrant@gmail.com</p>
+			<p>(801) 815-2561</p>
+		</div>
+
+		<div class="col-md-4 about-us-box wow fadeInUp animated">
+		    <div class="about-us-photo">
+		    	<img src="images/tristan.jpg" alt="" style="width:140px;height:110px;">
+		    	<div class="about-us-role">Computer Eng.</div>
+		    </div>
+		    <h3>Tristan Stotesbery</h3>
+		    <p>tristan.stotesbery@gmail.com</p>
+			<p>(801) 839-9688</p>
+		</div>
+
+		<div class="col-md-4 about-us-box wow fadeInUp animated" >
+		    <div class="about-us-photo">
+		    	<img src="images/ben.jpg" alt="" style="width:115px;height:130px;">
+		    	<div class="about-us-role">Computer Eng.</div>
+		    </div>
+		    <h3>Ben Van Hoose</h3>
+		    <p>benvanhoose1@gmail.com</p>
+			<p>(541) 806-2912</p>
+		</div>
+	</div><!-- End row -->
+	<p style="text-align:center">Looking for: People experienced with bluetooth interfacing and 
+		app development, people with 3D-printing experience.</p>
+</div><!-- End container -->	
+<!-- End About -->
+<br>
+<br>
+
+<!-- Footer -->
+<footer>
+    <div class="container">
+    	<div class="row">
+            <div class="col-sm-12 footer-social">
+            	<a href="#"><i class="fa fa-facebook"></i></a>
+		    	<a href="#"><i class="fa fa-dribbble"></i></span></a>
+		        <a href="#"><i class="fa fa-twitter"></i></a>            	
+            	<a href="#"><i class="fa fa-instagram"></i></a>
+            	<a href="#"><i class="fa fa-google-plus"></i></a>
+            	<a href="#"><i class="fa fa-pinterest"></i></a>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-sm-12 footer-copyright">
+            	© Import Template by <a href="http://templatestock.co">Template Stock</a>.
+            </div>
+        </div>
+    </div>
+</footer>
+<!-- End Footer -->
+
+
+<script type="text/javascript" src="js/jquery-main.js"></script>
+<script type="text/javascript" src="js/bootstrap.min.js"></script>
+<script src="js/wow.min.js"></script>
+
+<script>
+	new WOW().init();
+</script>
 
 </body>
-  
-  <!--<script src="js/news.js"></script>
-  <script src="js/index.js"></script>-->
-
 </html>
-
-
