--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
 
 		<div class="col-md-4 about-us-box wow fadeInUp animated">
 		    <div class="about-us-photo">
-		    	<img src="images/tristan.jpg" alt="" style="width:140px;height:110px;">
+		    	<img src="images/tristan.JPG" alt="" style="width:140px;height:110px;">
 		    	<div class="about-us-role">Computer Eng.</div>
 		    </div>
 		    <h3>Tristan Stotesbery</h3>
