--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 			<h1>Abstract</h1>
 			<p style="font-size: 20px;"><b>Our teams objective is to create a handheld water depth sensor that will interface with a phone to give the user the depth, 
 			for use in applications such as canyoneering, fishing, cliff diving, search and rescue.</b></p>
-			<p style="font-size: 20px;"><b>We need to utilize either ultrasonic sensors, pressure sensors, or sonar in order to calculate water depth regardless 
+			<p style="font-size: 20px;"><b>We need to utilize either ultrasonic sensors or sonar in order to calculate water depth regardless 
 			on how clear the water is. Needs to be small enough to be handheld, lightweight for taking in a pack.</b></p>
 			<p style="font-size: 20px;"><b>This project allows improved safety in several applications including those mentioned above. Knowing how deep or shallow
 			water is can prevent accidents from happening in areas.</b></p>
@@ -140,8 +140,8 @@
 		<div class="col-md-3 col-sm-6">
 			<div class="features-div">
 			   <i class="fa fa-mobile"></i>
-			   <h4>Future Challenge</h4>
-			   <p></p>
+			   <h4>Calibrating sensor to work in water</h4>
+			   <p>Lots of testing</p>
 			</div>			
 		</div><!-- End col-md-3-->
 	</div><!-- End row -->
@@ -163,11 +163,16 @@
 	  <tr>
 		<td>Decide what sensors to order</td>
 		<td>2/26/21</td>
-		<td>no</td>
+		<td>yes</td>
 	  </tr>
 	  <tr>
 		<td>Add template and finalize Webpage V2</td>
 		<td>3/12/21</td>
+		<td>yes</td>
+	  </tr>
+	  <tr>
+		<td>Test sensors</td>
+		<td>3/25/21</td>
 		<td>no</td>
 	  </tr>
 	  <tr>
